--- a/src/notes/09-递归1.md
+++ b/src/notes/09-递归1.md
@@ -1,5 +1,11 @@
 主角：递归
 
++ 1 递归如何解决问题
++ 2 递归如何分析递归算法的时间/空间复杂度
++ 3 怎么使用递归
+
+原理：每当使用递归时，就将给定的问题拆解为子问题，递归调用继续进行，知道子问题唔训进一步解决
+
 **递归满足的是那个条件:**
 <pre>
 1.一个问题的解可以分解为几个子问题的解。
