feat: 优先队列的应用

--- a/src/notes/11-堆.md
+++ b/src/notes/11-堆.md
@@ -1,5 +1,6 @@
 ### 堆
 
 二叉堆：是一个完全二叉树，堆中某个节点的值总是不大于其父节点的值  
-完全二叉树：把元素顺序排列成树的形状，我们称之为完全二叉树，如果缺失一定是右侧。
-满二叉树：除了叶子节点，其它的节点既拥有左孩子，又拥有右孩子
+完全二叉树：把元素顺序排列成树的形状，我们称之为完全二叉树，如果缺失一定是右侧。 满二叉树：除了叶子节点，其它的节点既拥有左孩子，又拥有右孩子。
+
+优先队列队列的实现由最大堆/最小堆，优先队列非常适合解决top K问题。
